--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,9 @@ pydantic = "^2.11.7"
 # telemetry
 opentelemetry-api = {version = "^1.20.0", optional=true}
 opentelemetry-sdk = {version = "^1.20.0", optional=true}
+
+# context compression
+llmlingua = {version = "^0.2.2", optional=true}
 opentelemetry-instrumentation-flask = {version = "^0.55b1", optional=true}
 opentelemetry-instrumentation-requests = {version = "^0.55b1", optional=true}
 opentelemetry-exporter-otlp = {version = "^1.34.1", optional=true}
@@ -150,6 +153,7 @@ telemetry = [
 ]
 dspy = ["dspy", "sentence-transformers"]
 eval = ["dspy", "sentence-transformers"]
+context_compression = ["llmlingua", "sentence-transformers"]
 all = [
     # server
     "flask", "flask-cors", "pydantic",
